<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.nathanshih.logger.StartNewWorkoutActivity">

    <TextView
        android:id="@+id/screen"
        android:text="@string/hello_world"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="8"
        android:scrollbars="vertical"/>
    <Button
        android:id="@+id/one"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/screen"
        android:text="@string/btnstringone"/>
    <Button
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/one"
        android:layout_below="@id/screen"
        android:text="@string/btnstringtwo"/>
    <Button
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/two"
        android:layout_below="@id/screen"
        android:text="@string/btnstringthree"/>
    <Button
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/one"
        android:text="@string/btnstringfour"/>
    <Button
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/two"
        android:layout_toRightOf="@id/four"
        android:text="@string/btnstringfive"/>
    <Button
        android:id="@+id/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/three"
        android:layout_toRightOf="@id/five"
        android:text="@string/btnstringsix"/>
    <Button
        android:id="@+id/seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/four"
        android:text="@string/btnstringseven"/>
    <Button
        android:id="@+id/eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/five"
        android:layout_toRightOf="@id/seven"
        android:text="@string/btnstringeight"/>
    <Button
        android:id="@+id/nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/six"
        android:layout_toRightOf="@id/eight"
        android:text="@string/btnstringnine"/>
    <Button
        android:id="@+id/at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/seven"
        android:text="@string/btnstringat"/>
    <Button
        android:id="@+id/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eight"
        android:layout_toRightOf="@id/at"
        android:text="@string/btnstringzero"/>
    <Button
        android:id="@+id/times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nine"
        android:layout_toRightOf="@id/zero"
        android:text="@string/btnstringtimes"/>




</RelativeLayout>
